--- a/catalog.html
+++ b/catalog.html
@@ -265,12 +265,12 @@
         </form>
         <ul class="sort-list">
           <li class="sort-item-down">
-            <a class="arrow" href="#">p
+            <a class="arrow" href="#">
               <span class="visually-hidden">Стрелка вверх</span>
             </a>
           </li>
           <li class="sort-item-up">
-            <a class="arrow arrow-active" href="#">p
+            <a class="arrow arrow-active" href="#">
               <span class="visually-hidden">Стрелка вниз</span>
             </a>
           </li>
@@ -280,36 +280,36 @@
     <section class="cards">
       <ul class="cards-list">
         <li class="cards-item">
-          <a class="product-card-image" href="#"><img src="img/product-1.jpg" width="360" height="380" alt="фотография любительская селфи-палка"></a>
+          <a class="product-card-image" href="#"><img class="product-card-images" src="img/product-1.png" width="360" height="380" alt="фотография любительская селфи-палка"></a>
           <div class="product-subtitle">
             <h3 class="product-card-title">Любительская селфи-палка</h3>
             <p class="product-card-subtitle">500 ₽</p>
           </div>
           <a class="detailed-button" href="#">Подробнее</a>
-          <span class="label-new">new</span>
+          <span class="label-new visually-hidden">new</span>
         </li>
         <li class="cards-item">
-          <a class="product-card-image" href="#"><img src="img/product-2.jpg" width="360" height="380" alt="фотография любительская селфи-палка"></a>
+          <a class="product-card-image" href="#"><img src="img/product-2.png" width="360" height="380" alt="фотография любительская селфи-палка"></a>
           <div class="product-subtitle">
-            <h3 class="product-card-title">Профессиональная селфи-палка</h3>
+            <h3 class="product-card-title">Профессиональная <br> селфи-палка</h3>
             <p class="product-card-subtitle">1 500 ₽</p>
           </div>
           <a class="detailed-button" href="#">Подробнее</a>
-          <span class="label-new">new</span>
+          <span class="label-new visually-hidden">new</span>
         </li>
         <li class="cards-item">
-          <a class="product-card-image" href="#"><img src="img/product-3.jpg" width="360" height="380" alt="фотография любительская селфи-палка"></a>
+          <a class="product-card-image" href="#"><img src="img/product-3.png" width="360" height="380" alt="фотография любительская селфи-палка"></a>
           <div class="product-subtitle">
-            <h3 class="product-card-title">Непотопляемая селфи-палка</h3>
+            <h3 class="product-card-title">Непотопляемая <br> селфи-палка</h3>
             <p class="product-card-subtitle">2 500 ₽</p>
           </div>
           <a class="detailed-button" href="#">Подробнее</a>
-          <span class="label-new">new</span>
+          <span class="label-new visually-hidden">new</span>
         </li>
         <li class="cards-item">
-          <a class="product-card-image" href="#"><img src="img/product-4.jpg" width="360" height="380" alt="фотография любительская селфи-палка"></a>
+          <a class="product-card-image" href="#"><img src="img/product-4.png" width="360" height="380" alt="фотография любительская селфи-палка"></a>
           <div class="product-subtitle">
-            <h3 class="product-card-title">Селфи-палка «Следуй за мной»</h3>
+            <h3 class="product-card-title">Селфи-палка «Следуй за <br> мной»</h3>
             <p class="product-card-subtitle">4 900 ₽</p>
           </div>
           <a class="detailed-button" href="#">Подробнее</a>
@@ -319,34 +319,33 @@
       <div class="card-button">
         <button class="cards-button" type="button">Загрузить еще</button>
       </div>
+
+      <section class="pagination">
+        <h2 class="visually-hidden">Пагинация</h2>
+        <button class="pagination-button pagination-previous-page" type="button">Назад</button>
+        <ul class="pagination-list">
+          <li class="pagination-item">
+            <a class="pagination-link" href="#">1</a>
+          </li>
+          <li class="pagination-item">
+            <a class="pagination-link" href="#">2</a>
+          </li>
+          <li class="pagination-item">
+            <a class="pagination-link" href="#">3</a>
+          </li>
+          <li class="pagination-item">
+            <a class="pagination-link" href="#">...</a>
+          </li>
+          <li class="pagination-item">
+            <a class="pagination-link" href="#">15</a>
+          </li>
+        </ul>
+        <button class="pagination-button pagination-next-page" type="button">Вперёд</button>
+      </section>
+
     </section>
   </div>
-
   </div>
-
-
-    <section class="pagination">
-      <h2 class="visually-hidden">Пагинация</h2>
-      <button class="pagination-button pagination-previous-page" type="button">Назад</button>
-      <ul class="pagination-list">
-        <li class="pagination-item">
-          <a class="pagination-link" href="#">1</a>
-        </li>
-        <li class="pagination-item">
-          <a class="pagination-link" href="#">2</a>
-        </li>
-        <li class="pagination-item">
-          <a class="pagination-link" href="#">3</a>
-        </li>
-        <li class="pagination-item">
-          <a class="pagination-link" href="#">...</a>
-        </li>
-        <li class="pagination-item">
-          <a class="pagination-link" href="#">15</a>
-        </li>
-      </ul>
-      <button class="pagination-button pagination-next-page" type="button">Вперёд</button>
-    </section>
   </main>
   <footer class="main-footer">
     <div class="contact-footer">
