--- a/index.html
+++ b/index.html
@@ -435,7 +435,7 @@
       </a>
     </div>
   </footer>
-  <section class="modal-wrapper modal-cloe">
+  <section class="modal-wrapper modal-close">
     <div class="modal">
       <form class="modal-form" action="https://echo.htmlacademy.ru/" method="post">
         <fieldset class="modal-form-container">
