--- a/catalog.html
+++ b/catalog.html
@@ -83,7 +83,7 @@
                 <ul class="header-popup-list">
                   <li class="header-popup-item">
                     <div class="list-product-one" tabindex="1">
-                      <img class="popup-foto" src="img/product-1-small.png" width="41" height="43"
+                      <img class="popup-foto" src="../1205835-device-32/img/product-1.png" width="41" height="43"
                         alt="Фото любительской селфи-палки">
                       <p class="popup-name-product">Любительская <br> селфи-палка</p>
                     </div>
@@ -280,7 +280,7 @@
     <section class="cards">
       <ul class="cards-list">
         <li class="cards-item">
-          <a class="product-card-image" href="#"><img class="product-card-images" src="img/product-1.png" width="360" height="380" alt="фотография любительская селфи-палка"></a>
+          <img tabindex="1" class="product-card-images" src="img/product-1.png" width="360" height="380" alt="фотография любительская селфи-палка">
           <div class="product-subtitle">
             <h3 class="product-card-title">Любительская селфи-палка</h3>
             <p class="product-card-subtitle">500 ₽</p>
@@ -289,7 +289,7 @@
           <span class="label-new visually-hidden">new</span>
         </li>
         <li class="cards-item">
-          <a class="product-card-image" href="#"><img src="img/product-2.png" width="360" height="380" alt="фотография любительская селфи-палка"></a>
+          <img tabindex="1" class="product-card-images" src="img/product-2.png" width="360" height="380" alt="фотография любительская селфи-палка">
           <div class="product-subtitle">
             <h3 class="product-card-title">Профессиональная <br> селфи-палка</h3>
             <p class="product-card-subtitle">1 500 ₽</p>
@@ -298,7 +298,7 @@
           <span class="label-new visually-hidden">new</span>
         </li>
         <li class="cards-item">
-          <a class="product-card-image" href="#"><img src="img/product-3.png" width="360" height="380" alt="фотография любительская селфи-палка"></a>
+          <img tabindex="1" class="product-card-images" src="img/product-3.png" width="360" height="380" alt="фотография любительская селфи-палка">
           <div class="product-subtitle">
             <h3 class="product-card-title">Непотопляемая <br> селфи-палка</h3>
             <p class="product-card-subtitle">2 500 ₽</p>
@@ -307,7 +307,7 @@
           <span class="label-new visually-hidden">new</span>
         </li>
         <li class="cards-item">
-          <a class="product-card-image" href="#"><img src="img/product-4.png" width="360" height="380" alt="фотография любительская селфи-палка"></a>
+          <img tabindex="1" class="product-card-images" src="img/product-4.png" width="360" height="380" alt="фотография любительская селфи-палка">
           <div class="product-subtitle">
             <h3 class="product-card-title">Селфи-палка «Следуй за <br> мной»</h3>
             <p class="product-card-subtitle">4 900 ₽</p>
