--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             <span class="visually-hidden">Увидеть список каталога товаров</span>
           </button>
           <!-- Чтобы открыть дополнительный список товаров нужно убрать catalog-submenu-open  -->
-          <div class="catalog-submenu  catalog-submenu-ope">
+          <div class="catalog-submenu  catalog-submenu-open">
             <div class="catolog-submenu-wrapper">
               <ul class="submenu-list">
                 <li class="submenu-item">
@@ -295,31 +295,35 @@
     </section>
     <section class="advantages-shop">
       <h2 class="visually-hidden">Преимущества магазина</h2>
-
-      <ul class="purchase-terms-list">
-        <li class="purchase-terms-item purchase-terms-active">Доставка</li>
-        <li class="purchase-terms-item">Гарантия</li>
-        <li class="purchase-terms-item">Кредит</li>
-      </ul>
-      <div class="tab-one tab-active">
-        <h3 class="name-tab">Доставка</h3>
-
-        <p class="tab-description">Мы с удовольствием доставим ваш товар прямо <br> к вашему подъезду совершенно
-          бесплатно! Ведь <br> мы неплохо заработаем, поднимая его на ваш этаж.</p>
+      <div class="advantages-shop-container">
+        <ul class="purchase-terms-list">
+          <li class="purchase-terms-item purchase-terms-active">Доставка</li>
+          <li class="purchase-terms-item">Гарантия</li>
+          <li class="purchase-terms-item">Кредит</li>
+        </ul>
+        <div class="advantages-tab">
+        <div class="tab-one tab-active">
+          <h3 class="name-tab">Доставка</h3>
+          <p class="tab-description">Мы с удовольствием доставим ваш товар прямо <br> к вашему подъезду совершенно
+            бесплатно! Ведь <br> мы неплохо заработаем, поднимая его на ваш этаж.</p>
+        </div>
+        <div class="tab-two visually-hidden">
+          <h3 class="name-tab">Гарантия</h3>
+          <p class="tab-description">Если из-за возгорания купленного у нас товара у вас <br> сгорит дом — не
+            переживайте,
+            мы выдадим вам новый. <br> Товар, не дом, конечно же.</p>
+          <img class="description-picture" width="171" height="195" src="img/warranty-1.png" alt="Картинка гарантии">
+        </div>
+        <div class="tab-three visually-hidden">
+          <h3 class="name-tab">Кредит</h3>
+          <p class="tab-description">Залезть в долговую яму стало проще! Кредитные <br> консультанты подберут для вас
+            наиболее выгодные <br> условия кредита. Выгодные для банка, разумеется.</p>
+          <img class="description-picture" width="156" height="188" src="img/credit-1.png" alt="Картинка кредита">
+        </div>
       </div>
 
-      <div class="tab-two visually-hidden">
-        <h3 class="name-tab">Гарантия</h3>
-        <p class="tab-description">Если из-за возгорания купленного у нас товара у вас <br> сгорит дом — не переживайте,
-          мы выдадим вам новый. <br> Товар, не дом, конечно же.</p>
-        <img class="description-picture" width="171" height="195" src="img/warranty-1.png" alt="Картинка гарантии">
       </div>
-      <div class="tab-three visually-hidden">
-        <h3 class="name-tab">Кредит</h3>
-        <p class="tab-description">Залезть в долговую яму стало проще! Кредитные <br> консультанты подберут для вас
-          наиболее выгодные <br> условия кредита. Выгодные для банка, разумеется.</p>
-        <img class="description-picture" width="156" height="188" src="img/credit-1.png" alt="Картинка кредита">
-      </div>
+
     </section>
     <section class="delivery">
       <h2 class="visually-hidden">Доставка</h2>
